samples/_failures_safe/1761499607_0904e5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_128cd3b4.c: In function ‘main’:
./samples/SAFE/__tmp_128cd3b4.c:150:9: error: ‘decomp’ undeclared (first use in this function)
  150 |     if (decomp
      |         ^~~~~~
./samples/SAFE/__tmp_128cd3b4.c:150:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_128cd3b4.c:150:15: error: expected ‘)’ at end of input
  150 |     if (decomp
      |        ~      ^
      |               )
./samples/SAFE/__tmp_128cd3b4.c:150:5: error: expected declaration or statement at end of input
  150 |     if (decomp
      |     ^~
